--- a/measurement_analyze.html
+++ b/measurement_analyze.html
@@ -76,6 +76,17 @@
 
     require(resource);
   </script>
+  <style>
+    .css-d3-graph{
+      cursor: pointer;
+    }
+    .css-d3-graph:before{
+      content: "before"
+    }
+    .css-d3-graph:after{
+      content: "after"
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -88,6 +99,28 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">检查机动队</a>
+        <ul class="nav navbar-nav">
+          <li><a id="id-btn-toolbar-create" href="#" onfocus="this.blur()" data-toggle="modal" data-target="#id-dialog-forToolbar">Create</a></li>
+          <li><a id="id-btn-toolbar-save" href="#" onfocus="this.blur()">Save</a></li>
+          <li><a id="id-btn-toolbar-save" href="#" onfocus="this.blur()">Clear</a></li>
+
+          <li>
+            <a id="id-btn-toolbar-insert" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Insert
+            <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="id-btn-toolbar-insert">
+              <li><a id="id-btn-insert-graph" href="#">Graph</a></li>
+              <li><a id="id-btn-insert-cursor" href="#" data-toggle="modal" data-target="#id-dialog-addPlot">Plot</a></li>
+              <li><a href="#">Table</a></li>
+              <li><a href="#">Formula</a></li>
+              <li><a href="#">Shape</a></li>
+              <li><a href="#">Picture</a></li>
+            </ul>
+          </li>
+
+          <li><a href="#">Imort</a></li>
+        </ul>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -133,23 +166,7 @@
         </div>
       -->
 
-        <!-- top: toolbar -->
-        <div class="row" style="border-bottom:1px solid #ddd;padding-bottom:3px;">
-          <div class="btn-toolbar" role="toolbar">
-            <div class="btn-group" role="group">
-              <button type="button" class="btn btn-default" onfocus="this.blur()" data-toggle="modal" data-target="#id-dialog-forToolbar">Create</button>
-              <button type="button" class="btn btn-default" onfocus="this.blur()">Save</button>
-              <button type="button" class="btn btn-default" onfocus="this.blur()">Clear</button>
-            </div>
-            <div class="btn-group" role="group">
-              <button type="button" class="btn btn-default">Left</button>
-              <button type="button" class="btn btn-default">Middle</button>
-              <button type="button" class="btn btn-default">Right</button>
-            </div>
-          </div>
-        </div>
-
-        <!-- dialog for toolbar -->
+        <!-- dialog for toolbar - create page -->
         <div id="id-dialog-forToolbar" class="modal fade" aria-hidden="true" data-backdrop="false">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -163,12 +180,12 @@
                     <div class="form-group">
                       <label class="col-md-3 control-label">Graph name:</label>
                       <div class="col-md-8">
-                        <input type="text" class="form-control" id="id-input-graphName" placeholder="graph01" />
+                        <input type="text" class="form-control" id="id-input-graphName" placeholder="graph name" />
                       </div>
                     </div>
                     <!-- graph type -->
                     <div class="form-group">
-                      <label class="col-md-3 control-label">Type & Config:</label>
+                      <label class="col-md-3 control-label">Type - Config:</label>
                       <div class="col-md-4">
                         <select id="id-select-graphType" class="selectpicker" data-live-search="true" data-width="fit">
                           <option>折线图</option>
@@ -189,12 +206,55 @@
           </div><!-- /.modal -->
         </div>
 
+        <!-- dialog for toolbar - add plot -->
+        <div id="id-dialog-addPlot" class="modal fade" aria-hidden="true" data-backdrop="false">
+          <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="cursor: move;">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <h4 class="modal-title" id="">Add new plot</h4>
+                </div>
+                <div class="modal-body">
+                  <form class="form-horizontal">
+                    <!-- graph name-->
+                    <div class="form-group">
+                      <label class="col-md-3 control-label">Graph name:</label>
+                      <div class="col-md-8">
+                        <input type="text" class="form-control" id="" placeholder="graph name" />
+                      </div>
+                    </div>
+                    <!-- graph type -->
+                    <div class="form-group">
+                      <label class="col-md-3 control-label">Type - Config:</label>
+                      <div class="col-md-4">
+                        <select id="id-select-mdfFile" class="selectpicker" data-live-search="true" data-width="fit">
+                          <option>dat file1</option>
+                          <option>dat file2</option>
+                        </select>
+                      </div>
+                      <div class="col-md-4">
+                        <select id="id-select-channel" class="selectpicker" data-live-search="true" data-width="fit">
+                          <option>d1</option>
+                          <option>d2</option>
+                        </select>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                  <button type="button" class="btn btn-primary">OK</button>
+                </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal -->
+        </div>
+
         <!-- body: painter area -->
-        <div id="id-tabs-painter" class="row">
+        <div id="id-tabs-painter" class="row" style="top:36px;overflow-y:scroll;">
           <ul>
-
+            <!--some li of tabs head-->
           </ul>
-
+          <!--some div of tabs content-->
         </div>
 
       </div>
@@ -205,22 +265,30 @@
 <!-- js running on this index page -->
 <script>
   window.addEventListener("load", function(){
-    //initialize dialog for toolbar
-    $("#id-dialog-forToolbar").draggable({
+    //all modals are draggable
+    $("div.modal").draggable({
       handle: ".modal-header"
     });
 
 
+    // modal for create page
     $(function(){
-      var tabTitle = $( "#tab_title" ),
+      // bind cursor postion change event
+      document.onselectionchange = function(){
+
+      }
+
+      // $ functions initialize
+      var tabTitle = $( "#id-input-graphName" ),
           tabContent = $( "#tab_content" ),
           tabTemplate = "<li><a href='#{href}'>#{label}</a> <span class='ui-icon ui-icon-close' role='presentation'>Remove Tab</span></li>",
           tabCounter = 1;
+
       var tabs = $("#id-tabs-painter").tabs();
 
       tabs.on("click", "span.ui-icon-close", function(){
         var panelId = $( this ).closest( "li" ).remove().attr( "aria-controls" );
-        $( "#id-" + panelId ).remove();
+        $( "#" + panelId ).remove();
         tabs.tabs( "refresh" );
       });
 
@@ -229,28 +297,43 @@
         $("#id-dialog-forToolbar").modal("hide");
       });
 
+      // insert graph
+      $("#id-btn-insert-graph").on("click", function(){
+        var activePanelId = $("ul[role='tablist'] > li[aria-selected='true']").attr("aria-controls");
+        d3.select("#" + activePanelId).goblinsD3Painter();
+      })
+
       function addTab(graphName){
-        var label = tabTitle.val() || "Tab " + tabCounter,
+        //#id-input-graphName
+        var label = tabTitle.val() || "graph " + tabCounter,
             id = "tabs-" + tabCounter,
             li = $( tabTemplate.replace( /#\{href\}/g, "#" + id ).replace( /#\{label\}/g, label ) ),
-            tabContentHtml = tabContent.val() || "Tab " + tabCounter + " content.";
+            tabContentHtml = tabContent.val() || "Page " + tabCounter + " Title";
 
         tabs.find( ".ui-tabs-nav" ).append( li );
-        tabs.append( "<div id='" + id + "'><p>" + tabContentHtml + "</p></div>" );
+        tabs.append( "<div id='" + id + "' contenteditable='true'><h3>" + tabContentHtml + "</h3></div>" );
         tabs.tabs( "refresh" );
         tabCounter++;
 
         // swtich to latest tab (import!)
-        tabs.tabs("option", "active", -1)
+        tabs.tabs("option", "active", -1);
       }
 
+      // $ functions initialize end!
     });
 
-
+    // modal for add plot
+    $(function(){
+      $("div #id-dialog-addPlot .btn-primary").on("click", function(){
+        let data = eval($("#id-select-channel").val());
+        d3.activeGraph.addPlot({data:data});
+        $("#id-dialog-addPlot").modal("hide");
+      });
+    });
 
     // initialize the painter area
 
-    d3.select("#id-tabs-1").goblinsD3Painter();
+    //d3.select("#id-tabs-1").goblinsD3Painter();
 
     //
 
@@ -268,5 +351,6 @@
   // test1 end
 
   // test2
-  var demoChannel = [{x:1, y:1}, {x:2, y:4}, {x:1.2, y:8.2}, {x:3.9, y:0.8}];
+  var d1 = [{x:1, y:1}, {x:2, y:4}, {x:3.2, y:8.2}, {x:6.9, y:0.8}];
+  var d2 = [{x:1.3, y:8}, {x:2.5, y:8.7}, {x:6.2, y:8.2}, {x:8.9, y:0.8}];
 </script>
