--- a/measurement_analyze.html
+++ b/measurement_analyze.html
@@ -77,6 +77,38 @@
     require(resource);
   </script>
   <style>
+    /* global*/
+    div:focus{
+      outline: none;
+    }
+    .css-d3-graph{
+      position: relative;
+    }
+    .css-d3-graph .css-d3-line:hover{
+      filter: url(#id-svg-filter-glow);
+    }
+    .css-d3-graph .css-d3-line:focus{
+      filter: url(#id-svg-filter-glow);
+    }
+    /* legend table */
+    .css-d3-legendTable{
+      border: 1px solid #ddd;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+
+    .css-d3-legendTable-td{
+      width: 36px;
+      height: 20px;
+      text-align: center;
+      vertical-align: middle;
+    }
+    .css-d3-legend-svgBox, .css-d3-legend-svgBox rect{
+      width: 24px;
+      height: 12px;
+    }
+
     .css-d3-graph{
       cursor: pointer;
     }
@@ -102,7 +134,7 @@
         <ul class="nav navbar-nav">
           <li><a id="id-btn-toolbar-create" href="#" onfocus="this.blur()" data-toggle="modal" data-target="#id-dialog-forToolbar">Create</a></li>
           <li><a id="id-btn-toolbar-save" href="#" onfocus="this.blur()">Save</a></li>
-          <li><a id="id-btn-toolbar-save" href="#" onfocus="this.blur()">Clear</a></li>
+          <li><a id="id-btn-toolbar-data" href="#" onfocus="this.blur()" data-toggle="modal" data-target="#id-dialog-data">Data</a></li>
 
           <li>
             <a id="id-btn-toolbar-insert" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -120,8 +152,10 @@
           </li>
 
           <li><a href="#">Imort</a></li>
+          <li><a id="id-btn-cursorMode" href="#">Cursor</a></li>
         </ul>
       </div>
+      <!--
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Dashboard</a></li>
@@ -133,6 +167,7 @@
           <input type="text" class="form-control" placeholder="Search...">
         </form>
       </div>
+      -->
     </div>
   </nav>
 
@@ -234,12 +269,78 @@
                       </div>
                       <div class="col-md-4">
                         <select id="id-select-channel" class="selectpicker" data-live-search="true" data-width="fit">
-                          <option>d1</option>
-                          <option>d2</option>
+                          <option>testChannel.d1</option>
+                          <option>testChannel.d2</option>
+                          <option>testChannel.d3</option>
                         </select>
                       </div>
                     </div>
                   </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                  <button type="button" class="btn btn-primary">OK</button>
+                </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal -->
+        </div>
+
+        <!-- dialog for toolbar - data management -->
+        <div id="id-dialog-data" class="modal fade" aria-hidden="true" data-backdrop="false">
+          <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="cursor: move;">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <h4 class="modal-title" id="">Data Management</h4>
+                </div>
+                <div class="modal-body">
+                  <form class="form-horizontal">
+                    <!-- import mdf-->
+                    <div class="form-group">
+                      <label class="col-md-3 control-label">Import DAT:</label>
+                      <div class="col-md-8">
+                        <input id="id-a2lFileInput" type="file" class="jfilestyle" data-placeholder="请添加一个DAT文件" data-inputSize="fit">
+                      </div>
+                    </div>
+
+                    <!-- imported mdf list-->
+                    <ul class="list-group" style="max-height:300px;overflow-y:scroll;">
+                      <li class="list-group-item">1.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">2.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">3.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">1.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">2.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">3.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">1.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">2.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">3.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">1.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">2.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">3.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">1.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">2.dat<span class="badge">remove</span></li>
+                      <li class="list-group-item">3.dat<span class="badge">remove</span></li>
+                    </ul>
+
+                    <!-- graph type -->
+                    <div class="form-group">
+                      <label class="col-md-3 control-label">Graph Used Channel:</label>
+                      <div class="col-md-4">
+                        <select id="id-select-mdfFile" class="selectpicker" data-live-search="true" data-width="fit">
+                          <option>graph 1</option>
+                          <option>graph 2</option>
+                        </select>
+                      </div>
+                      <div class="col-md-4">
+                        <select id="id-select-channel" class="selectpicker" data-live-search="true" data-width="fit">
+                          <option>testChannel.d1</option>
+                          <option>testChannel.d2</option>
+                          <option>testChannel.d3</option>
+                        </select>
+                      </div>
+                    </div>
+                  </form>
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -254,6 +355,17 @@
           <ul>
             <!--some li of tabs head-->
           </ul>
+          <svg width="0" height="0">
+            <defs>
+              <filter id="id-svg-filter-glow" x="-2" y="-2" width="200" height="200">
+                <feGaussianBlur stdDeviation="2.5" result="coloredBlur" />
+                <feMerge>
+                  <feMergeNode in="coloredBlur" />
+                  <feMergeNode in="SourceGraphic" />
+                </feMerge>
+              </filter>
+            </defs>
+          </svg>
           <!--some div of tabs content-->
         </div>
 
@@ -331,6 +443,11 @@
       });
     });
 
+    //
+    $(function(){
+
+    });
+
     // initialize the painter area
 
     //d3.select("#id-tabs-1").goblinsD3Painter();
@@ -340,7 +457,7 @@
   });
 
   // test1
-  kkk = [1,2,3]
+  /*kkk = [1,2,3]
 
   var vue_checkResult_col1 = new Vue({
     el: "#id-checkResult-name",
@@ -348,9 +465,16 @@
       list: UAESNameSpace.parseResults
     }
   });
+  */
+
   // test1 end
 
-  // test2
-  var d1 = [{x:1, y:1}, {x:2, y:4}, {x:3.2, y:8.2}, {x:6.9, y:0.8}];
-  var d2 = [{x:1.3, y:8}, {x:2.5, y:8.7}, {x:6.2, y:8.2}, {x:8.9, y:0.8}];
+  // test2: simulate data array for plot
+  var testChannel = {
+    d1: [{x:1, y:1}, {x:2, y:0}, {x:3, y:1}, {x:4, y:2}],
+    d2: [{x:1, y:0.5}, {x:2, y:1}, {x:3, y:0.5}, {x:4, y:2}],
+    d3: [{x:1, y:2}, {x:2, y:0.7}, {x:3, y:3.2}, {x:4, y:0.8}]
+  }
+
+  var temp2;
 </script>
