the zoom event should be binded on more elments

--- a/report.html
+++ b/report.html
@@ -162,23 +162,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#" style="color:#0c7cd5;font-weight:bolder;">UAES Network</a>
-
-      </div>
-      <!--
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-        <form class="navbar-form navbar-right">
-          <input type="text" class="form-control" placeholder="Search...">
-        </form>
-      </div>
-      -->
-      <div class="navbar-collapse collapse" aria-expanded = "false" style="height:1px;">
+        <a class="navbar-brand" href="#">检查机动队</a>
         <ul class="nav navbar-nav">
           <li><a id="id-btn-toolbar-create" href="#" onfocus="this.blur()" data-toggle="modal" data-target="#id-dialog-forToolbar">Create</a></li>
           <li><a id="id-btn-toolbar-save" href="#" onfocus="this.blur()">Save</a></li>
@@ -202,6 +186,21 @@
           <li><a href="#">Imort</a></li>
           <li><a id="id-btn-cursorMode" href="#">Cursor</a></li>
         </ul>
+      </div>
+      <!--
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Settings</a></li>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+        <form class="navbar-form navbar-right">
+          <input type="text" class="form-control" placeholder="Search...">
+        </form>
+      </div>
+      -->
+      <div class="navbar-collapse collapse" aria-expanded = "false" style="height:1px;">
         <ul class="nav navbar-nav">
           <li><a href="#">a1</a></li>
           <li><a href="#">b2</a></li>
@@ -213,22 +212,7 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-4"><img width="380" height="240" src="assets/png/gmail.png" ></div>
-      <div class="col-xs-8">
-        <h4>Welcome to UAES Network!</h4>
-        <p>Here you will find many interesting things.
-          <ol style="padding-left:20px;">
-            <li>MDA Online</li>
-            <li>DCM Online</li>
-            <li>Report Generation</li>
-            <li>Data Mining Playground</li>
-          </ol>
-        </p>
-      </div>
-    </div>
-  </div>
+
   <div class="container">
     <div class="row">
       <!-- sidebar
